correctly align feature card text and info box icons

--- a/src/components/features/features-list/feature-card/feature-card.module.scss
+++ b/src/components/features/features-list/feature-card/feature-card.module.scss
@@ -4,6 +4,7 @@
   cursor: pointer;
   color: $navy-blue;
   text-align: center;
+  align-items: center;
 
   &:hover {
     .imageWrapper {
